Archive/07aa468dfa24a6dba821463d1fd0b459-f674c1a6d04c632b71a62362c0ccfc51/output
+ g++ -std=c++11 -O2 -Wall -pedantic -pthread main.cpp
main.cpp: In function ‘int main(int, char**)’:
main.cpp:10:5: error: jump to case label [-fpermissive]
     default :
     ^
main.cpp:9:13: error:   crosses initialization of ‘int number’
         int number=3;
             ^
main.cpp:9:13: warning: unused variable ‘number’ [-Wunused-variable]
